re PR rtl-optimization/8613 (-O2 optimization generates wrong code)

PR optimization/8613
	* builtins.c (expand_builtin): Emit postincrements before expanding
	builtin functions.

From-SVN: r63209